Added MVC related intro points.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,7 @@
 
   <body>
     <%= yield %>
+    <%# View are the front-end part of the Rails app. The user interacts with the view part
+      Embedded template files (.erb) hare HTML files with Ruby code embedded in them. %>
   </body>
 </html>
